# app/Http/Controllers/AssetTypesQueryController.php
@@ -49,4 +49,29 @@ class AssetTypesQueryController extends Controller
     $result =  $this->assetTypeQuery->getAction($id);
     return $this->responseWithData($result);
     }
+
+        /**
+     * @OA\Get(
+     *     path="/digital/api/asset-types/list",
+     *     operationId="GetAllasset",
+     *     tags={"AssetTypes"},
+     *     summary="Get all actions",
+     *     description="Get details of all actions from the system",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Data Found",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="No data found",
+     *         @OA\JsonContent()
+     *     ),
+     * )
+     */
+    public function index()
+    {
+        $result = $this->assetTypeQuery->getAll();
+        return $this->responseWithData($result);
+    }
 }
