# app/Http/Controllers/ClassificationsQueryController.php
@@ -49,4 +49,28 @@ class ClassificationsQueryController extends Controller
         $result =  $this->classificationQuery->getAction($id);
         return $this->responseWithData($result);
     }
+        /**
+     * @OA\Get(
+     *     path="/digital/api/classifications/list",
+     *     operationId="GetAllclassifications",
+     *     tags={"Classifications"},
+     *     summary="Get all actions",
+     *     description="Get details of all actions from the system",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Data Found",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="No data found",
+     *         @OA\JsonContent()
+     *     ),
+     * )
+     */
+    public function index()
+    {
+        $result = $this->classificationQuery->getAll();
+        return $this->responseWithData($result);
+    }
 }
