# app/Http/Controllers/StatusesQueryController.php
@@ -49,4 +49,27 @@ class StatusesQueryController extends Controller
         $result =  $this->statusQuery->getAction($id);
         return $this->responseWithData($result);
     }
+        /**
+     * @OA\Get(
+     *     path="/digital/api/statuses/list",
+     *     operationId="GetAllstatuses",
+     *     tags={"Statuses"},
+     *     summary="Get all actions",
+     *     description="Get details of all actions from the system",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Data Found",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="No data found",
+     *         @OA\JsonContent()
+     *     ),
+     * )
+     */
+    public function index() : JsonResponse {
+        $result =  $this->statusQuery->getAll();
+        return $this->responseWithData($result);
+    }
 }
